welcome.lessons.welcome.summative.Moria.scala.code
def biscuit(){
while (!estSurBiscuit){
  recule()
}
prendBiscuit()
while (!estSurBiscuit){
  avance()
}
recule()
poseBiscuit()
  bisucit}